[gd_scene load_steps=9 format=2]

[ext_resource path="res://VHS.shader" type="Shader" id=1]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/EndScreen.gd" type="Script" id=3]
[ext_resource path="res://TV.shader" type="Shader" id=4]
[ext_resource path="res://Graphics/SkyBackgroundGradient1280x720.png" type="Texture" id=5]
[ext_resource path="res://Music/disco_music.ogg" type="AudioStream" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/tape_wave_amount = 0.003
shader_param/tape_crease_amount = 0.0
shader_param/color_displacement = 0.0
shader_param/lines_velocity = 0.1

[sub_resource type="ShaderMaterial" id=2]
render_priority = -2
shader = ExtResource( 4 )
shader_param/vertJerkOpt = 0.099
shader_param/vertMovementOpt = 0.0
shader_param/bottomStaticOpt = 0.0
shader_param/bottomStaticStrenth = 0.0
shader_param/scalinesOpt = 0.283
shader_param/rgbOffsetOpt = 0.0
shader_param/horzFuzzOpt = 0.0

[node name="MarginContainer" type="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 185.0
margin_top = 245.0
margin_right = 1095.0
margin_bottom = 475.0
alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 910.0
margin_bottom = 35.0

[node name="highscore" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 392.0
margin_right = 518.0
margin_bottom = 35.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Highscore"
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 910.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 56.0
margin_right = 854.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "You reached the Party! But the snacks are already gone..."
uppercase = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 910.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 245.0
margin_right = 665.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "Click space to make it earlier"
uppercase = true

[node name="Level21" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 910.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Level21"]
margin_right = 910.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "You made it to the party on time and even brought all the snacks."
uppercase = true

[node name="Level22" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 910.0
margin_bottom = 191.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Level22"]
margin_left = 287.0
margin_right = 623.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "Ready for the big party?"
uppercase = true

[node name="Level23" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 910.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Level23"]
margin_left = 378.0
margin_right = 532.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 2 )
text = "Click space"
uppercase = true

[node name="Effects" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="BackBufferCopy" type="BackBufferCopy" parent="Effects"]
copy_mode = 2
rect = Rect2( 0, 0, 1280, 720 )

[node name="ColorRect" type="ColorRect" parent="Effects/BackBufferCopy"]
material = SubResource( 1 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy2" type="BackBufferCopy" parent="Effects"]
copy_mode = 2
rect = Rect2( 0, 0, 1280, 720 )

[node name="ColorRect" type="ColorRect" parent="Effects/BackBufferCopy2"]
material = SubResource( 2 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
autoplay = true
